<resources>
    <string name="app_name">RestaurantApp3</string>
    <string name="cheeseburger">Cheeseburger</string>
    <string name="classic_burger">Classic Burger</string>
    <string name="cheeseburger_description">Our take on an American favorite, with house sauce and brioche</string>
    <string name="cheeseburger_price">7.99</string>
    <string name="add_to_order">+</string>
    <string name="remove_from_order">-</string>
    <string name="starting_quantity">Qty: 0</string>
    <string name="submit">Submit</string>
    <string name="li_quantity">Qty: 1</string>
    <string name="subtotal">Subtotal:</string>
    <string name="example_subtotal">$30.00</string>
    <string name="example_tax">$3.02</string>
    <string name="tax_label">Tax:</string>
    <string name="tip_label">Tip:</string>
    <string name="example_tip">0.00</string>
    <string name="total_label">Total:</string>
    <string name="sample_total">$37.52</string>
    <string name="enter_payment">Enter Payment</string>
    <string name="card_number_label">Card Number:</string>
    <string name="csc">CSC:</string>
    <string name="expiration_label">Expiration (mm/yy):</string>
    <string name="send_order">Send Order</string>
    <string name="thank_you">Thank you for placing your order.</string>
    <string name="creditConfirmLabel">Credit #:</string>
    <string name="sample_confirmation_code">JS08R44PQ888F0OQ</string>
    <string name="order_confirmation_code">Order Confirmation Code:</string>
    <string name="sample_credit_card">0000000000001234</string>
    <string name="csc_label">CSC:</string>
    <string name="sample_csc">012</string>
    <string name="confirm_expiration_date_label">Exp:</string>
    <string name="sample_expiry">09/19</string>
    <string name="test">test</string>
    <string name="dine_in">Dine In</string>
    <string name="take_out">Take-out</string>
    <string name="delivery">Delivery</string>
    <string name="payment_method">Payment Method</string>
    <string name="delivery_charge">Delivery:</string>
    <string name="sample_delivery">$5.00</string>
    <string name="order_summary">Order Summary</string>
    <string name="back">Back</string>
    <string name="confirm">Confirm</string>
    <string name="method">Method:</string>
    <string name="next">Next</string>
</resources>
