<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentActivity">
    <TextView
        android:id="@+id/summaryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_summary"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"/>
    <TextView
        android:id="@+id/subtotalLabel"
        android:text="@string/subtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/summaryLabel"
        app:layout_constraintStart_toStartOf="@id/summaryLabel"
        android:layout_marginTop="24dp"/>
    <TextView
        android:id="@+id/subtotal"
        android:text="@string/example_subtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/subtotalLabel"
        app:layout_constraintBaseline_toBaselineOf="@id/subtotalLabel"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"/>
    <TextView
        android:id="@+id/taxLabel"
        android:text="@string/tax_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/subtotalLabel"
        app:layout_constraintStart_toStartOf="@id/subtotalLabel"
        android:layout_marginTop="8dp"/>
    <TextView
        android:id="@+id/tax"
        android:text="@string/example_tax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/subtotal"
        app:layout_constraintBaseline_toBaselineOf="@id/taxLabel"/>
    <TextView
        android:id="@+id/deliveryChargeLabel"
        android:text="@string/delivery_charge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/taxLabel"
        app:layout_constraintStart_toStartOf="@id/subtotalLabel"
        android:layout_marginTop="8dp"/>
    <TextView
        android:id="@+id/delivery"
        android:text="@string/sample_delivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/subtotal"
        app:layout_constraintBaseline_toBaselineOf="@id/deliveryChargeLabel"/>
    <TextView
        android:id="@+id/tipLabel"
        android:text="@string/tip_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/deliveryChargeLabel"
        app:layout_constraintStart_toStartOf="@id/subtotalLabel"
        android:layout_marginTop="8dp"/>
    <EditText
        android:id="@+id/tip"
        android:inputType="numberDecimal"
        android:text="@string/example_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/subtotal"
        app:layout_constraintBaseline_toBaselineOf="@id/tipLabel"/>
    <TextView
        android:id="@+id/orderTotalLabel"
        android:text="@string/total_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tipLabel"
        app:layout_constraintStart_toStartOf="@id/subtotalLabel"
        android:layout_marginTop="8dp"/>
    <TextView
        android:id="@+id/total"
        android:text="@string/sample_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/subtotal"
        app:layout_constraintBaseline_toBaselineOf="@id/orderTotalLabel"/>
    <TextView
        android:id="@+id/paymentLabel"
        android:text="@string/enter_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintTop_toBottomOf="@id/orderTotalLabel"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"/>
    <TextView
        android:id="@+id/creditCardLabel"
        android:text="@string/card_number_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/paymentLabel"
        app:layout_constraintStart_toStartOf="@id/paymentLabel"
        android:layout_marginTop="16dp"/>
    <EditText
        android:id="@+id/creditCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/creditCardLabel"
        app:layout_constraintBaseline_toBaselineOf="@id/creditCardLabel" />
    <TextView
        android:id="@+id/cscLabel"
        android:text="@string/csc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/creditCardLabel"
        app:layout_constraintStart_toStartOf="@id/paymentLabel"
        android:layout_marginTop="16dp"/>
    <EditText
        android:id="@+id/csc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/creditCard"
        android:ems="4"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@id/cscLabel"/>
    <TextView
        android:id="@+id/expirationDateLabel"
        android:text="@string/expiration_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cscLabel"
        app:layout_constraintStart_toStartOf="@id/paymentLabel"
        android:layout_marginTop="16dp"/>
    <EditText
        android:id="@+id/month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/creditCard"
        android:ems="2"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@id/expirationDateLabel"/>
    <EditText
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/month"
        android:ems="2"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@id/expirationDateLabel"/>

    <Button
        android:id="@+id/backToOrderDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="@id/expirationDateLabel"
        app:layout_constraintTop_toBottomOf="@id/expirationDateLabel"
        android:layout_marginTop="36dp"/>

    <Button
        android:id="@+id/confirmationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/backToOrderDetail"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>