<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderConfirmation">

    <TextView
        android:id="@+id/thanksMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thank_you"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"/>
    <TextView
        android:id="@+id/confirmationCodeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_confirmation_code"
        app:layout_constraintTop_toBottomOf="@id/thanksMessage"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"/>
    <TextView
        android:id="@+id/confirmationCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_confirmation_code"
        app:layout_constraintStart_toEndOf="@id/confirmationCodeLabel"
        app:layout_constraintBaseline_toBaselineOf="@id/confirmationCodeLabel"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"/>
    <TextView
        android:id="@+id/creditConfirmLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creditConfirmLabel"
        app:layout_constraintTop_toBottomOf="@id/confirmationCodeLabel"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"/>
    <TextView
        android:id="@+id/creditConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_credit_card"
        app:layout_constraintStart_toEndOf="@id/creditConfirmLabel"
        app:layout_constraintBaseline_toBaselineOf="@id/creditConfirmLabel"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"/>
    <TextView
        android:id="@+id/cscConfirmLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/csc_label"
        app:layout_constraintTop_toBottomOf="@id/creditConfirmLabel"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"/>
    <TextView
        android:id="@+id/cscConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_csc"
        app:layout_constraintStart_toStartOf="@id/creditConfirm"
        app:layout_constraintBaseline_toBaselineOf="@id/cscConfirmLabel"/>
    <TextView
        android:id="@+id/expiryConfirmLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_expiration_date_label"
        app:layout_constraintTop_toBottomOf="@id/cscConfirmLabel"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"/>
    <TextView
        android:id="@+id/expiryConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_expiry"
        app:layout_constraintStart_toStartOf="@id/creditConfirm"
        app:layout_constraintBaseline_toBaselineOf="@id/expiryConfirmLabel"/>

</androidx.constraintlayout.widget.ConstraintLayout>