<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".OrderDisplay">
    <TextView
        android:id="@+id/summary"
        android:text="@string/order_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvOrderDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/summary"
        android:layout_marginTop="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
    <TextView
        android:id="@+id/methodLabel"
        android:text="@string/method"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvOrderDisplay"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"/>
    <RadioGroup
        android:id="@+id/fulfillmentMethod"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintStart_toEndOf="@id/methodLabel"
        app:layout_constraintTop_toTopOf="@id/methodLabel">
        <RadioButton android:id="@+id/dineIn"
            android:text="@string/dine_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"/>
        <RadioButton android:id="@+id/takeOut"
            android:text="@string/take_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton android:id="@+id/delivery"
            android:text="@string/delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <Button
        android:id="@+id/finalizeOrder"
        android:text="@string/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fulfillmentMethod"
        app:layout_constraintStart_toStartOf="@id/methodLabel"
        android:layout_marginTop="16dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>