<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView
        android:id="@+id/li_name"
        android:text="@string/cheeseburger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"/>
    <TextView
        android:id="@+id/li_quantity"
        android:text="@string/li_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/li_name"
        android:layout_toRightOf="@id/li_name"
        android:layout_alignTop="@id/li_name"
        android:layout_marginTop="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"/>
    <TextView
        android:id="@+id/li_price"
        android:text="@string/cheeseburger_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/li_quantity"
        android:layout_toRightOf="@id/li_quantity"
        android:layout_alignTop="@id/li_name"
        android:layout_marginTop="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"/>

</RelativeLayout>